--- a/SASS/1_composition/_fonts.scss
+++ b/SASS/1_composition/_fonts.scss
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: 'Shrikhand', serif;
+  font-family: 'Shrikhand';
   src: url('../fonts/Shrikhand-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
