--- a/assets/css/ohmyfood.css
+++ b/assets/css/ohmyfood.css
@@ -69,7 +69,7 @@
   font-display: block;
 }
 @font-face {
-  font-family: "Shrikhand", serif;
+  font-family: "Shrikhand";
   src: url("../fonts/Shrikhand-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
