--- a/SASS/1_composition/_scales.scss
+++ b/SASS/1_composition/_scales.scss
@@ -13,7 +13,7 @@ $typePrefix: 'fs-';
 
 $positiveSpaceSteps: (1.5, 2, 3, 4, 6);
 $negativeSpaceSteps: (0.75, 0.5, 0.25);
-$customSpaceSizes: ('300-500', '500-700');
+$customSpaceSizes: ('300-500', '500-700', '200-600', '100-800');
 $spacePrefix: 'space-';
 
 :root {
