--- a/SASS/3_block/home/_restaurants.scss
+++ b/SASS/3_block/home/_restaurants.scss
@@ -60,7 +60,7 @@
 
 @media (min-width: breakpoints.$home-restaurants-desktop) {
   .feed {
-    --_grid-gap: var(--space-400);
-    --_min-column-width: calc(50% - var(--_grid-gap));
+    --_grid-gap: var(--space-200-600) var(--space-100-800);
+    --_min-column-width: calc(50% - var(--space-100-800));
   }
 }
