--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -53,6 +53,7 @@
 }
 
 .restaurant {
+  position: relative;
   border-radius: var(--space-400);
 }
 .restaurant > .preview {
@@ -95,7 +96,18 @@
   font-weight: var(--fw-300);
 }
 .restaurant > .details label {
+  position: relative;
+  z-index: 1;
   font-size: var(--fs-500);
+  margin-inline-end: 0;
+}
+.restaurant > .link-to-page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  outline: 3px solid red;
 }
 
 @media (min-width: 650px) {
