changed the structure of the sass

--- a/SASS/3_block/ohmyfood/_footer.scss
+++ b/SASS/3_block/ohmyfood/_footer.scss
@@ -1,4 +1,4 @@
-@use '../1_composition/breakpoints' as breakpoints;
+@use '../../1_composition/breakpoints' as breakpoints;
 
 .main-footer {
   padding-block-start: var(--space-500-700);
