--- a/SASS/ohmyfood.scss
+++ b/SASS/ohmyfood.scss
@@ -1,4 +1,4 @@
 @use '1_composition/index' as composition;
 @use '2_utility/index' as utility;
-@use '3_block/index' as block_global;
+@use '3_block/ohmyfood/index' as block_global;
 @use '4_exception/index' as exception;
