--- a/SASS/1_composition/_scales.scss
+++ b/SASS/1_composition/_scales.scss
@@ -17,7 +17,7 @@ $customSpaceSizes: ('300-500', '500-700', '200-600', '100-800');
 $spacePrefix: 'space-';
 
 :root {
-  --maxWidth: #{$maxWidth}px;
+  --max-width: #{$maxWidth}px;
 
   @include utopia.generateTypeScale(
     (
