--- a/SASS/2_utility/_flow.scss
+++ b/SASS/2_utility/_flow.scss
@@ -3,12 +3,23 @@
  ************/
 
 .wrapper {
-  // --_max-wrapper-width: var(--maxWidth);
+  // --_max-wrapper-width: var(--max-width);
   // --_inline-wrapper-padding: var(--space-500);
 
   width: min(
-    var(--_max-wrapper-width, var(--maxWidth)),
+    var(--_max-wrapper-width, var(--max-width)),
     100% - (var(--_inline-wrapper-padding, var(--space-500)) * 2)
+  );
+  margin-inline: auto;
+}
+
+.wrapper-p-width {
+  // --_max-wrapper-width: var(--p-max-width);
+  // --_inline-wrapper-padding: var(--space-300);
+
+  width: min(
+    var(--_max-wrapper-width, var(--p-max-width)),
+    100% - (var(--_inline-wrapper-padding, var(--space-300)) * 2)
   );
   margin-inline: auto;
 }
@@ -42,12 +53,12 @@
 
 .flex-wrapper {
   // --_flex-direction: row;
-  // --_max-wrapper-width: var(--maxWidth);
+  // --_max-wrapper-width: var(--max-width);
   // --_inline-wrapper-padding: var(--space-500);
 
   flex-direction: var(--_flex-direction, row);
   width: min(
-    var(--_max-wrapper-width, var(--maxWidth)),
+    var(--_max-wrapper-width, var(--max-width)),
     100% - (var(--_inline-wrapper-padding, var(--space-500)) * 2)
   );
   margin-inline: auto;
@@ -68,6 +79,14 @@
   flex-direction: var(--_flex-direction, row);
   align-items: center;
   justify-content: space-between;
+}
+
+.flex-space-around {
+  // --_flex-direction: row;
+
+  flex-direction: var(--_flex-direction, row);
+  align-items: center;
+  justify-content: space-around;
 }
 
 /************
