--- a/SASS/3_block/restaurant/_hero.scss
+++ b/SASS/3_block/restaurant/_hero.scss
@@ -1,11 +1,11 @@
 .hero {
+  background-color: red;
   grid-column: hero;
   grid-row: hero;
-  aspect-ratio: initial;
-}
 
-.test {
-  background-color: red;
-  grid-row: 1/2;
-  grid-column: 1/2;
+  & > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
