--- a/assets/css/restaurant.css
+++ b/assets/css/restaurant.css
@@ -1,24 +1,77 @@
 .main-content {
   display: grid;
-  grid-template-columns: [hero-start] 1fr [menu-start] 1fr [menu-end] 1fr [hero-end];
-  grid-template-rows: [hero-start] calc(var(--space-300-400) * 19.25) [menu-start] calc(var(--space-400) * 2) [hero-end] 1fr [menu-end];
+  grid-template-columns: [hero-start] 1fr [menu-start] min(var(--max-width), 100%) [menu-end] 1fr [hero-end];
+  grid-template-rows: [hero-start] calc(var(--space-300-400) * 19.25 - var(--space-600)) [menu-start] var(--space-600) [hero-end] 1fr [menu-end];
 }
 
 .hero {
+  background-color: red;
   grid-column: hero;
   grid-row: hero;
-  aspect-ratio: initial;
 }
-
-.test {
-  background-color: red;
-  grid-row: 1/2;
-  grid-column: 1/2;
+.hero > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .menu {
   grid-column: menu;
   grid-row: menu;
+  padding-block: var(--space-600);
+}
+.menu > * {
+  --_flow-gap: var(--space-600);
+}
+.menu > .name {
+  max-width: calc(var(--p-max-width) * 0.6);
+  margin-inline: auto;
+}
+.menu > .name h2 {
+  font-family: var(--ff-logo);
+  font-size: var(--fs-600);
+}
+.menu > .name .icon-checkbox-heart {
+  margin-inline-end: var(--space-400);
+}
+.menu > .meal-category > * {
+  --_flow-gap: var(--space-300);
+}
+.menu > .meal-category h3 {
+  position: relative;
+  font-size: var(--fs-300);
+  font-weight: var(--fw-300);
+  text-transform: uppercase;
+}
+.menu > .meal-category h3::after {
+  content: "";
+  position: absolute;
+  bottom: calc(var(--space-100) * -2);
+  left: 0;
+  width: var(--space-600);
+  height: calc(var(--space-100) / 2);
+  background-color: var(--clr-information-400);
+}
+.menu > .meal-category .menu-item {
+  position: relative;
+}
+.menu > .meal-category .menu-item .dish-name {
+  font-weight: var(--fw-500);
+}
+.menu > .meal-category .menu-item .dish-info {
+  font-size: var(--fs-300);
+  font-weight: var(--fw-300);
+}
+.menu > .meal-category .menu-item .dish-price {
+  font-size: var(--fs-300);
+  font-weight: var(--fw-700);
+  color: var(--clr-neutral-700);
+}
+.menu > .meal-category .menu-item label {
+  position: absolute;
+  inset: 0;
+  display: block;
+  border: 1px solid red;
 }
 
 /*# sourceMappingURL=restaurant.css.map */
