--- a/assets/css/ohmyfood.css
+++ b/assets/css/ohmyfood.css
@@ -338,12 +338,23 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
   color: transparent;
 }
 
-input[type=checkbox]:not(:checked).icon-circle-check::before {
+.icon-circle-check:has(> input[type=checkbox]:not(:checked))::before {
   content: "";
+  margin-inline-end: 0;
 }
 
-input[type=checkbox]:checked.icon-circle-check::before {
+.icon-circle-check:has(> input[type=checkbox]:checked)::before {
   content: "\e909";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-inline-end: 0;
+  border-start-end-radius: var(--space-400);
+  border-end-end-radius: var(--space-400);
+  width: var(--space-700);
+  height: 100%;
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-information-400);
 }
 
 /************
@@ -391,16 +402,23 @@ input[type=checkbox]:checked.icon-circle-check::before {
   justify-content: center;
 }
 
+.flex-end {
+  flex-direction: var(--_flex-direction, row);
+  align-items: var(--_flex-align, center);
+  justify-content: flex-end;
+}
+
 .flex-space-between {
   --_flex-gap: normal;
   flex-direction: var(--_flex-direction, row);
-  align-items: center;
+  align-items: var(--_flex-align, center);
   justify-content: space-between;
 }
 
 .flex-space-around {
+  --_flex-gap: normal;
   flex-direction: var(--_flex-direction, row);
-  align-items: center;
+  align-items: var(--_flex-align, center);
   justify-content: space-around;
 }
 
