--- a/SASS/3_block/restaurant/_menu.scss
+++ b/SASS/3_block/restaurant/_menu.scss
@@ -48,15 +48,23 @@
       --_flex-align: stretch;
 
       & > .left {
+        min-width: 0;
         padding-inline: var(--space-300);
         padding-block: var(--space-200);
+
         & .dish-name {
           font-weight: var(--fw-500);
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
 
         & .dish-info {
           font-size: var(--fs-300);
           font-weight: var(--fw-300);
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
       }
 
@@ -79,5 +87,10 @@
         }
       }
     }
+  }
+
+  & .main-action-button {
+    padding-block: var(--space-300);
+    padding-inline: var(--space-600);
   }
 }
