--- a/SASS/3_block/ohmyfood/_components.scss
+++ b/SASS/3_block/ohmyfood/_components.scss
@@ -6,6 +6,7 @@
   );
 
   display: inline-block;
+  border-style: none;
   padding-inline: var(--space-400);
   padding-block: var(--space-300);
   font-size: var(--fs-300);
