--- a/assets/css/ohmyfood.css
+++ b/assets/css/ohmyfood.css
@@ -462,8 +462,17 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
   box-shadow: 0 var(--space-200) var(--space-300) 0 var(--clr-neutral-700);
 }
 
-.shadow {
-  box-shadow: 0px var(--space-100) var(--space-400) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
+.shadow-300 {
+  box-shadow: 0px var(--space-100) var(--space-200) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 75%);
+}
+
+.shadow-400 {
+  box-shadow: 0px var(--space-100) var(--space-300) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
+}
+
+.shadow-500 {
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px var(--space-100) var(--space-300) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 90%);
 }
 
 .rounded-border-300 {
@@ -497,6 +506,7 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
     var(--clr-scheme-2) 100%
   );
   display: inline-block;
+  border-style: none;
   padding-inline: var(--space-400);
   padding-block: var(--space-300);
   font-size: var(--fs-300);
