fixed the underline on the menu-category

--- a/SASS/3_block/restaurant/_menu.scss
+++ b/SASS/3_block/restaurant/_menu.scss
@@ -27,7 +27,9 @@
     }
 
     & h3 {
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: var(--space-200);
       font-size: var(--fs-300);
       font-weight: var(--fw-300);
       text-transform: uppercase;
@@ -35,9 +37,6 @@
 
     & h3::after {
       content: '';
-      position: absolute;
-      bottom: calc(var(--space-100) * -2);
-      left: 0;
       width: var(--space-600);
       height: calc(var(--space-100) / 2);
       background-color: var(--clr-information-400);
