implemented all the reqired features except the animations

--- a/SASS/3_block/ohmyfood/_footer.scss
+++ b/SASS/3_block/ohmyfood/_footer.scss
@@ -24,6 +24,10 @@
 
   font-size: var(--fs-300);
   font-weight: var(--fw-500);
+
+  & a {
+    text-decoration: none;
+  }
 }
 
 @media (min-width: breakpoints.$footer-desktop) {
