--- a/assets/css/ohmyfood.css
+++ b/assets/css/ohmyfood.css
@@ -529,7 +529,7 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
 
 .header-back-btn {
   position: absolute;
-  color: var(--clr-neutral-200);
+  color: var(--clr-neutral-700);
   font-size: var(--fs-500);
   top: 50%;
   transform: translate(var(--space-300-500), -50%);
@@ -575,6 +575,10 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
   flex-direction: column;
   font-size: var(--fs-300);
   font-weight: var(--fw-500);
+}
+.collaboration-links a,
+.support-links a {
+  text-decoration: none;
 }
 
 @media (min-width: 860px) {
