--- a/SASS/2_utility/_wrappings.scss
+++ b/SASS/2_utility/_wrappings.scss
@@ -15,6 +15,11 @@
     color-mix(in srgb, var(--clr-neutral-900), transparent 75%);
 }
 
+.shadow-300:hover {
+  box-shadow: 0px var(--space-200) var(--space-300) 0px
+    color-mix(in srgb, var(--clr-neutral-900), transparent 65%);
+}
+
 .shadow-400 {
   // shadow on concept
   box-shadow: 0px var(--space-100) var(--space-300) 0px
