--- a/assets/css/restaurant.css
+++ b/assets/css/restaurant.css
@@ -83,6 +83,28 @@
   font-weight: var(--fw-700);
   color: var(--clr-neutral-700);
 }
+.menu > .meal-category .menu-item > .right .icon-circle-check:has(> input[type=checkbox])::before {
+  margin-inline-end: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 200ms ease-out;
+}
+.menu > .meal-category .menu-item > .right .icon-circle-check:has(> input[type=checkbox]:not(:checked))::before {
+  content: "";
+}
+.menu > .meal-category .menu-item > .right .icon-circle-check:has(> input[type=checkbox]:checked)::before {
+  content: "\e909";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-start-end-radius: var(--space-400);
+  border-end-end-radius: var(--space-400);
+  width: var(--space-700);
+  height: 100%;
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-information-400);
+  transform: scaleX(1);
+}
 .menu > .meal-category .menu-item > .right label {
   --_flex-gap: 0;
   position: absolute;
