--- a/assets/css/restaurant.css
+++ b/assets/css/restaurant.css
@@ -5,7 +5,6 @@
 }
 
 .hero {
-  background-color: red;
   grid-column: hero;
   grid-row: hero;
 }
@@ -113,6 +112,45 @@
 .menu .main-action-button {
   padding-block: var(--space-300);
   padding-inline: var(--space-600);
+}
+
+.meal-category:nth-child(1) {
+  animation-delay: 250ms;
+}
+
+.meal-category:nth-child(2) {
+  animation-delay: 500ms;
+}
+
+.meal-category:nth-child(3) {
+  animation-delay: 750ms;
+}
+
+.meal-category:nth-child(4) {
+  animation-delay: 1000ms;
+}
+
+.meal-category:nth-child(5) {
+  animation-delay: 1250ms;
+}
+
+.meal-category {
+  animation: FadeIn 1s linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes FadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.1);
+  }
+  85% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 /*# sourceMappingURL=restaurant.css.map */
