fixed animation bug in menu category appearence

--- a/SASS/3_block/restaurant/_menu.scss
+++ b/SASS/3_block/restaurant/_menu.scss
@@ -129,6 +129,7 @@
 }
 
 .meal-category {
+  opacity: 0;
   animation: FadeIn 1s linear;
   animation-fill-mode: forwards;
 }
@@ -144,6 +145,7 @@
     transform: scale(1.05);
   }
   100% {
+    opacity: 1;
     transform: scale(1);
   }
 }
